--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.756.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -16,7 +17,9 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
