--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.21.0",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
