--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "emotion": "^10.0.27",
     "express": "^4.17.1",
     "firebase": "^7.21.0",
     "mongodb": "^3.6.2",
@@ -28,6 +29,7 @@
     "react-image-crop": "^8.6.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spinners": "^0.9.0",
     "timeago.js": "^4.0.2"
   },
   "scripts": {
