--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "timeago.js": "^4.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
