--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "12.x"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -29,6 +30,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-image-crop": "^8.6.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -40,7 +42,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-server": "nodemon server/index.js"
+    "start-server": "nodemon server/index.js",
+    "start-react": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
