--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "express": "^4.17.1",
-    "firebase": "^7.21.0",
+    "firebase": "^7.24.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0",
+    "sweetalert2": "^10.6.1",
     "timeago.js": "^4.0.2"
   },
   "scripts": {
